--- a/front/package.json
+++ b/front/package.json
@@ -20,9 +20,15 @@
     "@angular/router": "^18.0.0",
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@popperjs/core": "^2.11.8",
+    "@stomp/stompjs": "^7.0.0",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "bootstrap": "^5.3.2",
+    "net": "^1.0.2",
     "ngx-toastr": "^19.0.0",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
