--- a/front/tsconfig.app.json
+++ b/front/tsconfig.app.json
@@ -9,7 +9,8 @@
     ]
   },
   "files": [
-    "src/main.ts"
+    "src/main.ts",
+    "src/window-global-fix.ts"
   ],
   "include": [
     "src/**/*.d.ts"
